Added correct header file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(InlineAssembler VERSION 1.2)
 
 add_executable(InlineTest main.cpp)
 configure_file(InlineAssemblerConfig.h.in InlineAssemblerConfig.h)
+
+SET (CMAKE_CXX_FLAGS_INIT "-fsam-blocks")
